additional object Cycle